Create randomHexCode funtion, src folder, with data.js file

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@1,700&family=Poppins:wght@500;800&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@1,700&family=Poppins:wght@500;800&display=swap"
+    rel="stylesheet">
   <title>Colorandom</title>
 </head>
+
 <body class="full-page">
   <div class="title-container">
     <h1 class="title">COLORANDOM</h1>
@@ -21,7 +25,7 @@
       <div class="color-box orange-box"></div>
     </div>
     <div class="yellow-box-container">#FFE59A
-       <div class="color-box yellow-box"></div>
+      <div class="color-box yellow-box"></div>
     </div>
     <div class="green-box-container">#B6D7A8
       <div class="color-box green-box"></div>
@@ -30,6 +34,9 @@
       <div class="color-box blue-box"></div>
     </div>
   </main>
-<script type="text/javascript" src="main.js"></script>
+  <button>Submit</button>
+  <script type="text/javascript" src="src/main.js"></script>
+  <script type="text/javascript" src="src/data.js"></script>
 </body>
+
 </html>
