--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@1,700&family=Poppins:wght@500;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@1,700&family=Poppins:wght@200;500;800&display=swap" rel="stylesheet">
   <title>Colorandom</title>
 </head>
 <body class="full-page">
@@ -30,6 +30,9 @@
       <div class="color-box blue-box"></div>
     </div>
   </main>
+  <section class="btn-container">
+    <button class="new-palette-button">New Palette</button>
+  </section>
 <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
