--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body class="full-page">
+  <main class="main-container">
   <div class="title-container">
     <h1 class="title">COLORANDOM</h1>
   </div>
@@ -24,6 +25,11 @@
   </section>
   <script type="text/javascript" src="src/main.js"></script>
   <script type="text/javascript" src="src/data.js"></script>
+  </main>
+  <aside class="saved-palettes-container">
+    <h2 class="saved-palettes">Saved Palettes</h2>
+    <section class="color-boxes-container"></section>
+  </aside>
 </body>
 
 </html>
