Complete save palettes button styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <main class="palette-container">
   </main>
   <section class="btn-container">
-    <button class="new-palette-button">New Palette</button>
+    <button class="palette-button">New Palette</button>
+    <button class="palette-button">Save Palettes</button>
   </section>
   <script type="text/javascript" src="src/main.js"></script>
   <script type="text/javascript" src="src/data.js"></script>
