Add display saved palette functionality for a single color

--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
     <button class="palette-button">New Palette</button>
     <button class="palette-button save-palette">Save Palettes</button>
   </section>
-  <script type="text/javascript" src="src/main.js"></script>
-  <script type="text/javascript" src="src/data.js"></script>
   </main>
   <aside class="saved-palettes-container">
     <h2 class="saved-palettes-title">Saved Palettes</h2>
-    <section class="saved-color-boxes-container">
-      <div class="layer-one layer">
+    <div class="saved-colors-container">
+       <div class="layer-one layer">
         <div class="saved-color-box box-1"></div>
         <div class="saved-color-box box-2"></div>
         <div class="saved-color-box box-3"></div>
@@ -47,8 +45,9 @@
         <div class="saved-color-box box-14"></div>
         <div class="saved-color-box box-15"></div>
       </div>
-      </div>  
-    </section>
+    </div>
   </aside>
+  <script type="text/javascript" src="src/main.js"></script>
+  <script type="text/javascript" src="src/data.js"></script>
 </body>
 </html>
