Enable save color functionality except for one bug

--- a/index.html
+++ b/index.html
@@ -24,27 +24,8 @@
   <aside class="saved-palettes-container">
     <h2 class="saved-palettes-title">Saved Palettes</h2>
     <div class="saved-colors-container">
-       <div class="layer-one layer">
-        <div class="saved-color-box box-1"></div>
-        <div class="saved-color-box box-2"></div>
-        <div class="saved-color-box box-3"></div>
-        <div class="saved-color-box box-4"></div>
-        <div class="saved-color-box box-5"></div>
-      </div>
-      <div class="layer-two layer">
-        <div class="saved-color-box box-6"></div>
-        <div class="saved-color-box box-7"></div>
-        <div class="saved-color-box box-8"></div>
-        <div class="saved-color-box box-9"></div>
-        <div class="saved-color-box box-10"></div>
-      </div>
-      <div class="layer-three layer">
-        <div class="saved-color-box box-11"></div>
-        <div class="saved-color-box box-12"></div>
-        <div class="saved-color-box box-13"></div>
-        <div class="saved-color-box box-14"></div>
-        <div class="saved-color-box box-15"></div>
-      </div>
+      <p class="saved-palettes-message">No saved palettes yet!</p>
+    </div>
     </div>
   </aside>
   <script type="text/javascript" src="src/main.js"></script>
