Refine styling, functionality of code and add hide message function

--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
   </main>
   <section class="btn-container">
     <button class="palette-button">New Palette</button>
-    <button class="palette-button save-palette">Save Palettes</button>
+    <button class="palette-button save-palette">Save Palette</button>
   </section>
   </main>
   <aside class="saved-palettes-container">
     <h2 class="saved-palettes-title">Saved Palettes</h2>
-    <div class="saved-colors-container">
-      <p class="saved-palettes-message">No saved palettes yet!</p>
-    </div>
-    </div>
+    <div class="saved-colors-container"></div>
+    <p class="saved-palettes-message">No saved palettes yet!</p>
   </aside>
   <script type="text/javascript" src="src/main.js"></script>
   <script type="text/javascript" src="src/data.js"></script>
